[docs] CSS 적용 및 초기화와 웹 폰트 선언

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>web cafe</title>
+
+  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+  
 </head>
 <body>
   
@@ -23,6 +27,6 @@
   <footer>
     <div class="footer-inner">푸터</div>
   </footer>
-  
+
 </body>
 </html>
