--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
 </head>
 <body>
   
-  <header class="header">헤더</header>
+  <header class="header">
+
+    <h1 class="logo">
+
+      <a href="./index-complete.html">
+        <img src="./assets/logo.png" alt="web cafe" />
+      </a>
+
+    </h1>
+    <!-- .logo -->
+
+    <ul class="member">
+
+      <li><a href="/">홈</a></li>
+      <li><span class="divider" aria-hidden="true">:</span><a href="/">로그인</a></li>
+      <li><span class="divider" aria-hidden="true">:</span><a href="/">회원가입</a></li>
+      <li><span class="divider" aria-hidden="true">:</span><a href="/">사이트맵</a></li>
+      <li><span class="divider" aria-hidden="true">:</span><a href="/">english</a></li>
+
+    </ul>
+    <!-- .member -->
+
+  </header>
 
   <div class="visual">비주얼</div>
 
