--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
 	<link rel="stylesheet" href="./styles/style.css" />
 
+	<script src="./js/main.js" defer></script>
+
 </head>
 
 <body>
@@ -168,7 +170,15 @@
 
 	</header>
 
-	<div class="visual">비주얼</div>
+	<div class="visual">
+
+		<div class="visual-text">
+			Web Standards &amp; Accessibility 
+		</div>
+		<!-- .visual-text -->
+		
+	</div>
+	<!-- .visual -->
 
 	<main class="main">
 		<div class="group group1">그룹1</div>
@@ -181,6 +191,12 @@
 	<footer>
 		<div class="footer-inner">푸터</div>
 	</footer>
+
+
+
+
+
+	
 
 </body>
 
