로그인 마크업 완성

--- a/index.html
+++ b/index.html
@@ -181,9 +181,54 @@
 	<!-- .visual -->
 
 	<main class="main">
-		<div class="group group1">그룹1</div>
+
+		<div class="group group1">
+
+			<section class="login">
+
+				<h2 class="login-title">로그인</h2>
+
+				<form method="POST" action="" class="login-form">
+
+					<fieldset>
+						<legend>회원 로그인 폼</legend>
+					</fieldset>
+
+					<div class="user-email">
+						<label for="userEmail">아이디</label>
+						<input type="email" placeholder="fe@euid.dev" id="userEmail" />
+					</div>
+					<!-- .user-email -->
+
+					<div class="user-pw">
+						<label for="userPw">비밀번호</label>
+						<input type="password" placeholder="8자리 이상" id="userPw" />
+					</div>
+					<!-- .user-pw -->
+
+					<button type="submit" class="login-btn">로그인</button>
+
+				</form>
+				<!-- .login-form -->
+
+				<ul class="sign">
+					<li><a href="/">회원가입</a></li>
+					<li><a href="/">아이디/비밀번호 찾기</a></li>
+				</ul>
+				<!-- .sign -->
+
+			</section>
+			<!-- .login -->
+
+
+
+		</div>
+		<!-- .group group1 -->
+
 		<div class="group group2">그룹2</div>
+
 		<div class="group group3">그룹3</div>
+
 	</main>
 
 	<article class="slogan">슬로건</article>
