유효성 검사 배너 완성

--- a/index.html
+++ b/index.html
@@ -220,7 +220,24 @@
 			</section>
 			<!-- .login -->
 
+			<h2 class="a11y-hidden">유효성 검사 배너</h2>
 
+			<ul class="validation-list">
+
+				<li>
+					<a href="/" target="_blank" rel="noreferrer noopener" title="새창으로 이동">
+						WC3 Markup Validation
+					</a>
+				</li>
+
+				<li>
+					<a href="/" target="_blank" rel="noreferrer noopener" title="새창으로 이동">
+						CSS Validation Service
+					</a>
+				</li>
+
+			</ul>
+			<!-- .validation-list -->
 
 		</div>
 		<!-- .group group1 -->
