--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             <li class="no4">
 							<a href="/">CSS ZenGarden</a><em class="up"><span class="a11y-hidden">순위 상승</span></em>
 						</li>
-						
+
           </ol>
 					<!-- .favorite-list -->
 
@@ -513,7 +513,21 @@
 
 	</main>
 
-	<article class="slogan">슬로건</article>
+	<article class="slogan">
+
+    <h2 class="slogan-title" title="웹카페에서 웹표준을">슬로건</h2>
+
+    <p class="slogan-content">
+      <q cite="http://w3.org/WAI">The power of the Web is in its universality, Access by everyone regardless of disability is an essential aspect.</q>
+      Tim Berners - Lee , W3C Director and inventor of the World Wide Web
+    </p>
+
+    <footer class="a11y-hidden">
+      출처 : W3C, http://w3.org/WAI/
+    </footer>
+
+  </article>
+	<!-- .slogan -->
 
 	<footer>
 		<div class="footer-inner">푸터</div>
